# quoridor_view

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: index.html  play.html  qf_freeboard.css  qf_freeboard.js  view.html  viewer.js  viewer2.js
templates/: history.tera
