[package]
name = "quoridor_viewer"
version = "0.1.0"
authors = ["Terasaki Shun <t.tera1217@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen ="*"
serde = "*"
serde_json = "*"
serde_derive = "*"
toml = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates","json"]
